# CLINICAL_TRIALS_CLASSIFIER

./: .gitignore  Dockerfile  environment.yaml  pyproject.toml
src/ct_classifier/core/: processing.py  training.py  utils.py
src/ct_classifier/models/: snapshot.py
src/ct_classifier/ui/: cli.py
